Add further PDS components to MDX Textblock
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>
Signed-off-by: GitHub <noreply@github.com>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -1,3 +1,5 @@
+# Key Values and Principles
+
 ## Move from #commercial-software to #free-open-source-software, wherever possible
 
 - Porsche empowers their employees to dedicate time for participating in FOSS activities. `#FOSS Motivation`
