Reword FOSS Movement headline
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -1,4 +1,4 @@
-# Key Values and Principles
+# Our Key Values and Principles
 
 ## Move from #commercial-software to #free-open-source-software, wherever possible
 
