--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -1,36 +1,86 @@
-# Our Key Values and Principles
+import { Heading } from "../components/01_atoms/Heading";
+import { KeyValue } from "../components/02_molecules/foss_movement/KeyValue";
+import { Principle } from "../components/02_molecules/foss_movement/Principle";
+import s from "./page.module.scss";
 
-## Move from #commercial-software to #free-open-source-software, wherever possible
+<Heading
+  tag="h2"
+  theme="dark"
+  align="center"
+  size="x-large"
+  className={s.keyvalues}
+>
+  Key Values and Principles
+</Heading>
 
-- Porsche empowers their employees to dedicate time for participating in FOSS activities. `#FOSS Motivation`
-- An employee should evaluate open and inner-source software before deciding for commercial software. `#FOSS prefer`
-
-## Move from #consume to #contribute and #create in open-source-communities
-
-- FOSS activities are not only limited to contributing code but should also embrace non-code contributions such as
-  design, translations, bug reporting, UX Improvement, recruiting, testing, documentation, project and community management,
-  communication and many more. `#FOSS Contributions`
-- An employee should be committed and active in inner-source and open-source communities to foster collaboration, build
-  software faster, and embrace innovation. `#FOSS Collaboration`
-
-## Move from #know-it-all to #learn-it-all
-
-- Porsche shall support and enable its employees to use, contribute to, influence, and launch new FOSS activities to
-  acquire knowledge and partner with technology leaders. `#FOSS Community`
-- An employee should always act responsibly, adhere to existing codes of conduct, and own their FOSS activities to
-  endorse a positive image. `#FOSS Ethics`
-
-## Move towards #digital-transformation with open-source striving for speed of #innovation and shorter time to market
-
-- Porsche contributions in open-source communities should establish a foundation to promote reputation as digitally
-  enabled company and attract IT experts. `#FOSS Visibility`
-- An employee should be open to share and consume any FOSS activity within the Porsche inner-source community to
-  achieve shorter time to market by „not reinventing the wheel“. `#FOSS Reusability`
-
-## Move towards a #compliant environment for FOSS activities and #contributions
-
-- Porsche provides all means and information to enable the responsible employee to act in full awareness of the
-  “two sides of one coin” and avoid unnecessary risks for Porsche and the employees: the benefits of FOSS activities on
-  one side, and the corresponding legal, tax and business requirements on the other side. `#FOSS Integrity`
-- An employee should be encouraged and empowered to use FOSS and contribute to upstream projects by being provided
-  with lean but compliant processes. `#FOSS Compliance`
+<KeyValue
+  number="1"
+  text="Move from #commercial-software to #free-open-source-software, wherever possible"
+>
+  <Principle hashtag="FOSS Motivation">
+    Porsche empowers their employees to dedicate time for participating in FOSS
+    activities.
+  </Principle>
+  <Principle hashtag="FOSS prefer">
+    An employee should evaluate open and inner-source software before deciding
+    for commercial software.
+  </Principle>
+</KeyValue>
+<KeyValue
+  number="2"
+  text="Move from #consume to #contribute and #create in open-source-communities"
+>
+  <Principle hashtag="FOSS Contributions">
+    FOSS activities are not only limited to contributing code but should also
+    embrace non-code contributions such as design, translations, bug reporting,
+    UX Improvement, recruiting, testing, documentation, project and community
+    management, communication and many more.
+  </Principle>
+  <Principle hashtag="FOSS Collaboration">
+    An employee should be committed and active in inner-source and open-source
+    communities to foster collaboration, build software faster, and embrace
+    innovation.
+  </Principle>
+</KeyValue>
+<KeyValue number="3" text="Move from #know-it-all to #learn-it-all">
+  <Principle hashtag="FOSS Community">
+    Porsche shall support and enable its employees to use, contribute to,
+    influence, and launch new FOSS activities to acquire knowledge and partner
+    with technology leaders.
+  </Principle>
+  <Principle hashtag="FOSS Ethics">
+    An employee should always act responsibly, adhere to existing codes of
+    conduct, and own their FOSS activities to endorse a positive image.
+  </Principle>
+</KeyValue>
+<KeyValue
+  number="4"
+  text="Move towards #digital-transformation with open-source striving for speed of #innovation and shorter time to market"
+>
+  <Principle hashtag="FOSS Visibility">
+    Porsche contributions in open-source communities should establish a
+    foundation to promote reputation as digitally enabled company and attract IT
+    experts.
+  </Principle>
+  <Principle hashtag="FOSS Reusability">
+    An employee should be open to share and consume any FOSS activity within the
+    Porsche inner-source community to achieve shorter time to market by „not
+    reinventing the wheel“.
+  </Principle>
+</KeyValue>
+<KeyValue
+  number="5"
+  text="Move towards a #compliant environment for FOSS activities and #contributions"
+>
+  <Principle hashtag="FOSS Integrity">
+    Porsche provides all means and information to enable the responsible
+    employee to act in full awareness of the “two sides of one coin” and avoid
+    unnecessary risks for Porsche and the employees: the benefits of FOSS
+    activities on one side, and the corresponding legal, tax and business
+    requirements on the other side.
+  </Principle>
+  <Principle hashtag="FOSS Compliance">
+    An employee should be encouraged and empowered to use FOSS and contribute to
+    upstream projects by being provided with lean but compliant processes.
+  </Principle>
+</KeyValue>
