--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -7,7 +7,7 @@ import s from "./page.module.scss";
   tag="h2"
   theme="dark"
   align="center"
-  size="x-large"
+  size="xx-large"
   className={s.keyvalues}
 >
   Key Values and Principles
