💄 chore: Restyle WLTP notice
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/components/02_molecules/footer/WLTP.mdx
+++ b/src/components/02_molecules/footer/WLTP.mdx
@@ -1,7 +1,18 @@
-\* All new vehicles offered by Porsche are type-approved according to WLTP. Official NEDC values derived from WLTP values are no longer available for new vehicles as of 1 January 2023 and can therefore not be provided.
+\* All new vehicles offered by Porsche are type-approved according to WLTP.
+Official NEDC values derived from WLTP values are no longer available for new
+vehicles as of 1 January 2023 and can therefore not be provided.
 
-Where values are indicated as ranges, they do not refer to a single, specific vehicle and are not part of the offered product range. They are only for the purposes of comparison between different vehicle types. Additional equipment and accessories (add-on parts, tyre formats etc.) can change relevant vehicle parameters such as weight, rolling resistance and aerodynamics. These factors, in addition to weather, traffic conditions and driving behaviour, can influence the fuel/electricity consumption, CO₂ emissions, range and performance values of a vehicle.
+Where values are indicated as ranges, they do not refer to a single, specific
+vehicle and are not part of the offered product range. They are only for the
+purposes of comparison between different vehicle types. Additional equipment and
+accessories (add-on parts, tyre formats etc.) can change relevant vehicle
+parameters such as weight, rolling resistance and aerodynamics. These factors,
+in addition to weather, traffic conditions and driving behaviour, can influence
+the fuel/electricity consumption, CO₂ emissions, range and performance values of
+a vehicle.
 
-More information about the differences between WLTP and NEDC is available at [www.porsche.com/wltp](https://www.porsche.com/wltp).
+More information about the differences between WLTP and NEDC is available at
+[www.porsche.com/wltp.](https://www.porsche.com/wltp)
 
-\*\* Important information about the all-electric Porsche models can be found [here](https://www.porsche.com/international/accessoriesandservice/porscheservice/vehicleinformation/bev/).
+\*\* Important information about the all-electric Porsche models can be found
+[here.](https://www.porsche.com/international/accessoriesandservice/porscheservice/vehicleinformation/bev/)
