📝 docs: Minor adjustmens to contributing docs
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -6,8 +6,7 @@ import { Tag } from "../../../components/01_atoms/Tag";
 
 <InlineNotification theme="dark" dismissButton={false}>
   The FOSS activities we publish on behalf of Porsche are directly connected to the
-  Porsche brand and thus should be of the same quality and excellence as all of our
-  other commercial products. Please follow these best practices and standards for
+  Porsche brand. Please follow these best practices and standards for
   all of your FOSS activities. Don't hesitate to reach out to the OSO if you have
   any questions regarding FOSS contribution.
 </InlineNotification>
@@ -29,8 +28,7 @@ compliant when consuming open-source software, but be an outstanding open-source
 citizen by contributing back to the community and collaborating with
 professionals worldwide. Thus, please ensure to
 
-- act responsible and adhere to existing codes of conduct whenever participating
-  in FOSS projects,
+- act responsible,
 - help others wherever possible by sharing your knowledge,
 - learn from others and accept different standpoints or requirements,
 - give credit where credit's due, especially when collaborating with others.
