📝 content: Add link to GitHub organization
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -50,7 +50,7 @@ Please make sure that
 - you received final approval from OSO to contribute,
 - you have added an official Porsche email address to your GitHub account,
 - you sign all commits with your official Porsche email address and on behalf of
-  @porscheofficial.
+  [@porscheofficial](https://github.com/porscheofficial).
 
 To sign a commit on behalf of Porsche, please add the following block to the end
 of all your commit messages:
