💄 style: Remove numbers from key values
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -14,7 +14,6 @@ import s from "./page.module.scss";
 </Heading>
 
 <KeyValue
-  number="1"
   text="Move from #commercial-software to #free-open-source-software, wherever possible"
 >
   <Principle hashtag="FOSS Motivation">
@@ -27,7 +26,6 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  number="2"
   text="Move from #consume to #contribute and #create in open-source-communities"
 >
   <Principle hashtag="FOSS Contributions">
@@ -42,7 +40,7 @@ import s from "./page.module.scss";
     innovation.
   </Principle>
 </KeyValue>
-<KeyValue number="3" text="Move from #know-it-all to #learn-it-all">
+<KeyValue text="Move from #know-it-all to #learn-it-all">
   <Principle hashtag="FOSS Community">
     Porsche shall support and enable its employees to use, contribute to,
     influence, and launch new FOSS activities to acquire knowledge and partner
@@ -54,7 +52,6 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  number="4"
   text="Move towards #digital-transformation with open-source striving for speed of #innovation and shorter time to market"
 >
   <Principle hashtag="FOSS Visibility">
@@ -69,7 +66,6 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  number="5"
   text="Move towards a #compliant environment for FOSS activities and #contributions"
 >
   <Principle hashtag="FOSS Integrity">
