💄 style: Add linear background to FOSS movement
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -26,7 +26,7 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move from #consume to #contribute and #create in open-source-communities"
+  text="Move from #consume to #contribute and #create in open source communities"
 >
   <Principle hashtag="FOSS Contributions">
     FOSS activities are not only limited to contributing code but should also
