--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -1,17 +1,17 @@
-import { Heading } from "../components/01_atoms/Heading";
+import { Display } from "../components/01_atoms/Display";
 import { KeyValue } from "../components/02_molecules/foss_movement/KeyValue";
 import { Principle } from "../components/02_molecules/foss_movement/Principle";
 import s from "./page.module.scss";
 
-<Heading
+<Display
   tag="h2"
   theme="dark"
   align="center"
-  size="xx-large"
+  size="small"
   className={s.keyvalues}
 >
   Key Values and Principles
-</Heading>
+</Display>
 
 <KeyValue
   text="Move from #commercial-software to #free-open-source-software, wherever possible"
