📝 content: Remove hashtags from key values
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -14,7 +14,7 @@ import s from "./page.module.scss";
 </Display>
 
 <KeyValue
-  text="Move from #commercial-software to #free-open-source-software, wherever possible"
+  text="Move from commercial software to Free and open-source software, wherever possible"
 >
   <Principle hashtag="FOSS Motivation">
     Porsche empowers their employees to dedicate time for participating in FOSS
@@ -26,7 +26,7 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move from #consume to #contribute and #create in open source communities"
+  text="Move from consume to contribute and create in open-source communities"
 >
   <Principle hashtag="FOSS Contributions">
     FOSS activities are not only limited to contributing code but should also
@@ -40,7 +40,7 @@ import s from "./page.module.scss";
     innovation.
   </Principle>
 </KeyValue>
-<KeyValue text="Move from #know-it-all to #learn-it-all">
+<KeyValue text="Move from know-it-all to learn-it-all">
   <Principle hashtag="FOSS Community">
     Porsche shall support and enable its employees to use, contribute to,
     influence, and launch new FOSS activities to acquire knowledge and partner
@@ -52,7 +52,7 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move towards #digital-transformation with open-source striving for speed of #innovation and shorter time to market"
+  text="Move towards digital transformation with open source striving for speed of innovation and shorter time to market"
 >
   <Principle hashtag="FOSS Visibility">
     Porsche contributions in open-source communities should establish a
@@ -61,12 +61,12 @@ import s from "./page.module.scss";
   </Principle>
   <Principle hashtag="FOSS Reusability">
     An employee should be open to share and consume any FOSS activity within the
-    Porsche inner-source community to achieve shorter time to market by „not
-    reinventing the wheel“.
+    Porsche inner-source community to achieve shorter time to market by “not
+    reinventing the wheel”.
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move towards a #compliant environment for FOSS activities and #contributions"
+  text="Move towards a compliant environment for FOSS activities and contributions"
 >
   <Principle hashtag="FOSS Integrity">
     Porsche provides all means and information to enable the responsible
