📝 content: Reword FOSS Movement headline
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -10,7 +10,7 @@ import s from "./page.module.scss";
   size="small"
   className={s.keyvalues}
 >
-  Key Values and Principles
+  Our Key Values and Principles
 </Display>
 
 <KeyValue
