Polishing style and content (#4)
* 📝 fix: Fix typo
* 💄 style: Restyle project cards with more contrast
* ✏️ fix: Typos/style in FOSS Movement
* Reduce height of Hero section
* Light up linear gradient on FOSS Movement.
* Replace news cover images with lighter ones.
* 💄 style: Add fluid space to MDX files
* 💄 style: Remove top margin from first heading
* 💄 style: Add margin above navigation links
* 💄 style: Reduce whitespace between paragraphs in MDX
* 💄 style: Remove margin below hero other than home
* 💄 style: Reduce font size of FOSS key values
* 💄 style: Add spacing below hero to docs page
* 💄 style: Display less project cards on smaller devices
* 📝 content: Reword FOSS Movement headline

---------

Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/FOSS_MOVEMENT.mdx
+++ b/src/app/FOSS_MOVEMENT.mdx
@@ -10,7 +10,7 @@ import s from "./page.module.scss";
   size="small"
   className={s.keyvalues}
 >
-  Key Values and Principles
+  Our Key Values and Principles
 </Display>
 
 <KeyValue
@@ -26,7 +26,7 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move from #consume to #contribute and #create in open source communities"
+  text="Move from #consume to #contribute and #create in open-source communities"
 >
   <Principle hashtag="FOSS Contributions">
     FOSS activities are not only limited to contributing code but should also
@@ -52,7 +52,7 @@ import s from "./page.module.scss";
   </Principle>
 </KeyValue>
 <KeyValue
-  text="Move towards #digital-transformation with open-source striving for speed of #innovation and shorter time to market"
+  text="Move towards #digital-transformation with open source striving for speed of #innovation and shorter time to market"
 >
   <Principle hashtag="FOSS Visibility">
     Porsche contributions in open-source communities should establish a
@@ -61,8 +61,8 @@ import s from "./page.module.scss";
   </Principle>
   <Principle hashtag="FOSS Reusability">
     An employee should be open to share and consume any FOSS activity within the
-    Porsche inner-source community to achieve shorter time to market by „not
-    reinventing the wheel“.
+    Porsche inner-source community to achieve shorter time to market by “not
+    reinventing the wheel”.
   </Principle>
 </KeyValue>
 <KeyValue
