📝 docs: Minor adjustments to our docs
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -2,13 +2,13 @@ import { InlineNotification } from "../../../components/01_atoms/InlineNotificat
 import { LinkPure } from "../../../components/01_atoms/LinkPure";
 import { Tag } from "../../../components/01_atoms/Tag";
 
-## Contributing to a FOSS project on behalf of Porsche
+## Contributing to open-source projects
 
 <InlineNotification theme="dark" dismissButton={false}>
-  The FOSS activities we publish on behalf of Porsche are directly connected to the
-  Porsche brand. Please follow these best practices and standards for
-  all of your FOSS activities. Don't hesitate to reach out to the OSO if you have
-  any questions regarding FOSS contribution.
+  The purpose of this document is to provide transparency on how Porsche is
+  contributing to open-source projects and the standards we're internally
+  endorsing. The intended audience is both interested visitors as well as
+  employees of Porsche AG and subsidaries.
 </InlineNotification>
 
 ### Preliminary steps
@@ -36,18 +36,18 @@ professionals worldwide. Thus, please ensure to
 ### Establish a 4-eyes-principle
 
 If your proposed change is not trivial (e.g. fixing typos), please ensure that a
-suitable colleague of yours is able to
+colleague is able to
 
 - reproduce and confirm your issue or
 - review your change request and successfully build/execute the changed code.
 
 ### Configuring your GitHub account
 
-You can use your existing account on GitHub to contribute on behalf of Porsche.
-Please make sure that
+As an employee of Porsche AG or any subsidarie, uou can use your existing
+account on GitHub to contribute to open-source projects. Please make sure that
 
 - you and your supervisor have the required signature authorization,
-- you received final approval from OSO to contribute,
+- you received final approval from Open Source Office at Porsche AG to contribute,
 - you have added an official Porsche email address to your GitHub account,
 - you sign all commits with your official Porsche email address and on behalf of
   [@porscheofficial](https://github.com/porscheofficial).
