📝 doc: Fix typos
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -8,7 +8,7 @@ import { Tag } from "../../../components/01_atoms/Tag";
   The purpose of this document is to provide transparency on how Porsche is
   contributing to open-source projects and the standards we're internally
   endorsing. The intended audience is both interested visitors as well as
-  employees of Porsche AG and subsidaries.
+  employees of Porsche AG and subsidiaries.
 </InlineNotification>
 
 ### Preliminary steps
@@ -43,7 +43,7 @@ colleague is able to
 
 ### Configuring your GitHub account
 
-As an employee of Porsche AG or any subsidarie, uou can use your existing
+As an employee of Porsche AG or subsidiary, you can use your existing
 account on GitHub to contribute to open-source projects. Please make sure that
 
 - you and your supervisor have the required signature authorization,
