--- a/src/app/docs/creating/CREATING_FOSS.mdx
+++ b/src/app/docs/creating/CREATING_FOSS.mdx
@@ -8,7 +8,7 @@ import { Tag } from "../../../components/01_atoms/Tag";
   The purpose of this document is to provide transparency on how Porsche is
   managing new open-source projects and the standards we're internally endorsing
   to foster healthy communities. The intended audience is both interested
-  visitors as well as employees of Porsche AG and subsidaries.
+  visitors as well as employees of Porsche AG and subsidiaries.
 </InlineNotification>
 
 ### Preliminary steps
