📝 doc: Hide full stop in link
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/creating/CREATING_FOSS.mdx
+++ b/src/app/docs/creating/CREATING_FOSS.mdx
@@ -41,7 +41,7 @@ stable/working and be protected with a minimal set of branch protection rules:
 ```
 
 More information on our GitHub flow can be found in the [Porsche Development
-Guidance](https://devguidance.porsche.com/coding/vcs/git-branching-model/#nowadays-widely-adopted-github-flow).
+Guidance.](https://devguidance.porsche.com/coding/vcs/git-branching-model/#nowadays-widely-adopted-github-flow)
 
 ### Necessary files and documents
 
